# stream-monitor

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  compose.yaml
archive/command_wrapped_impl/: main.rs  tests.rs
automaton-constructor/: Cargo.toml  dfa_interface.json  example_dfa.json
automaton-constructor/src/: main.rs  tests.rs
dfa-to-regex/: dtr.py
docker-helpers/: startup.sh
hyperfine_testing/: test_monitor.sh
json-to-dfa/: dfa_interface.json  parse_dfa.rs  serialized_example_dfa.bc
monitor/: Cargo.toml  monitor_trap.sh
monitor/src/: lib.rs  main.rs  tests.rs
multi-monitor/: Cargo.toml  Makefile
multi-monitor/src/: main.rs
regex-dfa-builder/: pom.xml
regex-dfa-builder/src/main/java/com/example/regexdfa/: AutomatonSerializer.java  RegexDfaBuilder.java
regex-dfa-demo/: README.md  automaton.json  pom.xml
regex-dfa-demo/src/main/java/com/example/regexdfa/: AutomatonSerializer.java  RegexDfaDemo.java
src/: main.rs  tests.rs  timer.rs
testing/: Cargo.toml  Makefile  benchmark_results.csv  benchmarks.csv  comp_benchmark_results.csv  duplicate.sh
testing/benchmarks-and-results/: benchmark_results.csv  benchmark_results2.csv  benchmarks.csv  benchmarks2.csv  comp_benchmark_results.csv  comp_benchmark_results2.csv
testing/hyperfine_testing/: test_monitor.sh
testing/src/: main.rs
testing/trap-testing/: test_script.bash
