[workspace]
resolver = "3"
members = [ "automaton-constructor",
    "monitor"
]

[profile.release-with-debug] # For usage with pprof
inherits = "release"
debug = true          # Required for symbols
lto = false           # Don't link-time optimize everything out
codegen-units = 1     # Better inlining visibility
opt-level = 3         # Still keep it fast