[workspace]
resolver = "3"
members = [ "automaton-constructor",
    "monitor"
, "testing"]

[workspace.dependencies]
regex-automata = "0.4.9"
clap = { version = "4.5.40", features = ["derive"] }

[profile.release-with-debug] # For usage with pprof
inherits = "release"
debug = true          # Required for symbols
lto = false           # Don't link-time optimize everything out
codegen-units = 1     # Better inlining visibility
opt-level = 3         # Still keep it fast
