[package]
name = "monitor"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies] # Commented out dependencies are not being used anymore by this crate
clap.workspace = true
# regex = "1.11.1"
# pprof = { version = "0.13", features = ["flamegraph", "protobuf"] }
# nix = { version = "0.30.1", features = ["fs", "process"] }
regex-automata.workspace = true
atty = "0.2.14"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
bitcode = "0.6.6"
blake3 = "1.8.2"

[features]
default = []
timing = []
